# career-paths-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/chatmodes/: backend.agent.md
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: .gitkeep  20251129_0429_initial_schema.py
app/: __init__.py  main.py
app/api/v1/: career_paths.py  evaluation_cycles.py  evaluations.py  health.py  roles.py  skills.py  skills_assessments.py  users.py
app/core/: config.py  error_constants.py  errors.py  logging.py
app/db/: session.py  unit_of_work.py
app/domain/: evaluation_logic.py
app/integrations/: ai_career_client.py  ai_skills_client.py  base_ai_client.py  circuit_breaker.py  http_client.py  retry.py
app/schemas/: __init__.py
app/services/: __init__.py  career_path_service.py  dependencies.py  evaluation_cycle_service.py  evaluation_service.py  role_service.py  skill_service.py  skills_assessment_service.py  user_service.py
docs/: ARCHITECTURE.md  discusion.md  flows.md  planteamiento.md  schema.md
scripts/: README_SEEDING.md  run_tests.sh  seed_dummy_data.py  seed_test_data.py  start.sh
tests/: README.md  conftest.py  conftest_db.py
tests/e2e/: README.md  __init__.py  conftest.py  test_api_workflow.py  test_evaluation_pipeline.py
tests/factories/: evaluation_cycles.py  skills.py  users.py
tests/helpers/: async_mocks.py  e2e_setup.py  evaluations.py  uow_mocks.py
tests/integration/: conftest.py
(+59 files in other folders)
